# Csteroids

./: .gitignore  CMakeLists.txt  README.md  asteroids.data  asteroids.js  asteroids.wasm  build_web.bat  compile_commands.json  index.html
.cache/clangd/index/: SDL.h.AE558B18CFEBD7B6.idx  SDL_assert.h.47EDCD7CE3896D70.idx  SDL_asyncio.h.B75C7B3BDA0D5377.idx  SDL_atomic.h.076DE77E9201E826.idx  SDL_audio.h.8FAFD6354330FE92.idx  SDL_begin_code.h.BDE4872669123733.idx  SDL_bits.h.3DF84D7A6A85CCF9.idx  SDL_blendmode.h.84440FC021EB3277.idx  SDL_camera.h.3C8C1EA3E46FCF59.idx  SDL_clipboard.h.8EDB9B3B222339C3.idx  SDL_close_code.h.9864AAFF6578373C.idx  SDL_cpuinfo.h.535ABDD3E76A504B.idx  SDL_dialog.h.392F686B022A67E5.idx  SDL_endian.h.DBC1E16953DDD933.idx  SDL_error.h.6A3302A7670DD060.idx  SDL_events.h.0DF663DF0F87CF0C.idx  SDL_filesystem.h.8EE6901C4F72A1DB.idx  SDL_gamepad.h.91E688635DC4330D.idx  SDL_gpu.h.3168FE55293C49FB.idx  SDL_guid.h.52E84AFB33B77480.idx  SDL_haptic.h.DA2830AD8E4E508D.idx  SDL_hidapi.h.F46F949B5FB2E15B.idx  SDL_hints.h.B42279ACF8C5E6F2.idx  SDL_init.h.E1374A5CA7E8CEDA.idx  SDL_iostream.h.FC0F90F1C9C64031.idx  SDL_joystick.h.306DB541A548ECE4.idx  SDL_keyboard.h.649839C214062A05.idx  SDL_keycode.h.5FAB0D1E2F45FA5F.idx  SDL_loadso.h.AAA0C0F29B1DB6E6.idx  SDL_locale.h.6BF77F30EDE41F57.idx  SDL_log.h.C1DE3C638AB6E926.idx  (+30 more)
include/util/: array_list.c  array_list.h  f_ops.h  math_ext.h  time_ext.c  time_ext.h  v2.h
src/: asteroid.c  asteroid.h  audio.c  audio.h  button.c  button.h  game_types.h  main.c  main.h  particle.c  particle.h  shop.c  shop.h  text.c  text.h
src/util/: array_list.h  math_ext.h  v2.h  v3.h
(+1 files in other folders)
